Fix layout issue and update styles

--- a/src/sass/navbar.scss
+++ b/src/sass/navbar.scss
@@ -11,11 +11,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: rgba(255, 255, 255, 0.19);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(9.2px);
-  -webkit-backdrop-filter: blur(9.2px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: white;
+  box-shadow: 0 0 10px 1px rgb(223, 223, 223);
   padding: 5px 70px;
   transition: all 0.5s ease-in-out;
   z-index: 99;
@@ -61,6 +58,8 @@
     align-items: center;
     padding: 5px 30px;
     transition: all 0.5s ease-in-out;
+    background: white;
+    box-shadow: 0 0 10px 1px rgb(223, 223, 223);
     z-index: 99;
     &_child-1 {
       a {
@@ -79,6 +78,7 @@
       padding: 20px 50px;
       border-radius: 5px;
       transition: all 0.5s ease-in-out;
+
       a {
         text-decoration: none;
         color: var(--color3);
@@ -123,6 +123,8 @@
     align-items: center;
     padding: 5px 30px;
     transition: all 0.5s ease-in-out;
+    background: white;
+    box-shadow: 0 0 10px 1px rgb(223, 223, 223);
     z-index: 99;
     &_child-1 {
       a {
@@ -134,7 +136,7 @@
     }
     &_child-2 {
       position: absolute;
-      top: 110%;
+      top: 105%;
       height: 0px;
       right: 5px;
       display: flex;
@@ -142,11 +144,8 @@
       align-items: center;
       flex-direction: column;
       gap: 30px;
-      background: rgba(255, 255, 255, 0.19);
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(9.2px);
-      -webkit-backdrop-filter: blur(9.2px);
-      border: 1px solid rgba(255, 255, 255, 0.3);
+      background: white;
+      box-shadow: 0 0 10px 1px rgb(223, 223, 223);
       padding: 20px 50px;
       border-radius: 5px;
       opacity: 0;
@@ -182,6 +181,8 @@
     align-items: center;
     padding: 10px 20px;
     transition: all 0.5s ease-in-out;
+    background: white;
+    box-shadow: 0 0 10px 1px rgb(223, 223, 223);
     z-index: 99;
     &_child-1 {
       a {
@@ -193,7 +194,7 @@
     }
     &_child-2 {
       position: absolute;
-      top: 110%;
+      top: 105%;
       height: 0px;
       right: 0px;
       display: flex;
@@ -201,14 +202,11 @@
       align-items: center;
       flex-direction: column;
       gap: 30px;
-      background: rgba(255, 255, 255, 0.19);
-      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(9.2px);
-      -webkit-backdrop-filter: blur(9.2px);
-      border: 1px solid rgba(255, 255, 255, 0.3);
+      background: white;
+      box-shadow: 0 0 10px 1px rgb(223, 223, 223);
       border-radius: 5px;
       padding: 10px 40px;
-      border-radius:5px;
+      border-radius: 5px;
       opacity: 0;
       overflow: hidden;
       transition: all 0.5s ease-in-out;
@@ -248,41 +246,40 @@
   }
 }
 .sticky {
-  width: 90%;
+  width: 100%;
   position: sticky;
-  top: 15px;
+  top: 0px;
   animation-name: navbar;
   animation-duration: 1s;
   animation-timing-function: ease-in-out;
   animation-iteration-count: 1;
-  background: rgba(255, 255, 255, 0.19);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(9.2px);
-  -webkit-backdrop-filter: blur(9.2px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: white;
+  box-shadow: 0 0 10px 1px rgb(223, 223, 223);
 }
 .menuShow {
   opacity: 1;
   transition: all 0.5s ease-in-out;
   height: 300px;
+  background: white;
+  box-shadow: 0 0 10px 1px rgb(223, 223, 223);
+  z-index: 99;
+}
+.navbar_child-2,
+.menuShow {
+  z-index: 999;
 }
 @keyframes navbar {
   0% {
     width: 100%;
     position: sticky;
     top: -250px;
-    background-color: transparent;
+    background: white;
   }
   100% {
     position: sticky;
-    top: 15px;
-    width: 90%;
-    background: rgba(255, 255, 255, 0.19);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(9.2px);
-    -webkit-backdrop-filter: blur(9.2px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    top: 0px;
+    width: 100%;
+    background: white;
+    box-shadow: 0 0 10px 1px rgb(223, 223, 223);
   }
 }
